<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="menu_search">Поиск</string>
    <string name="menu_media">Медиатека</string>
    <string name="menu_settings">Настройки</string>

    <string name="night_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>

    <string name="course_link">https://practicum.yandex.ru/android-developer</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="dev_email">laorha@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="text_placeholder">Заглушка</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="check_connection">Загрузка не удалась. Проверьте подключение к интернету</string>

    <string name="media_favorites_placeholder_text">Ваша медиатека пуста</string>
    <string name="media_playlists_placeholder_text">Вы не создали \nни одного плейлиста</string>
    <string name="favorites_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="update">Обновить</string>

    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>


    <string name="durationText">Длительность</string>
    <string name="albumText">Альбом</string>
    <string name="yearText">Год</string>
    <string name="genreText">Жанр</string>
    <string name="countryText">Страна</string>

    <string name="duration_pl">00:00</string>
    <string name="album_pl">Альбом</string>
    <string name="year_pl">2099</string>
    <string name="genre_pl">Жанр</string>
    <string name="country_pl">Страна</string>

    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name ="create_playlist">Создать</string>

    <string name ="dialog_title">Завершить создание плейлиста?</string>
    <string name ="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name ="dialog_neutral">Отмена</string>
    <string name ="dialog_positive">Завершить</string>

    <string name ="playlist_share">Поделиться</string>
    <string name ="playlist_edit">Редактировать информацию</string>
    <string name ="playlist_delete">Удалить плейлист</string>
    <string name ="tracks_duration_placeholder">0 минут</string>

    <string name ="dialog_track_delete_title">Удалить трек</string>
    <string name ="dialog_delete_track_confirmation_message">Хотите удалить трек?</string>
    <string name ="dialog_confirm_deletion">Да</string>
    <string name ="dialog_confirm_cancel">Нет</string>

    <string name ="dialog_playlist_delete_title">Удалить плейлист</string>
    <string name ="dialog_delete_playlist_confirmation_message">Хотите удалить плейлист</string>
    <string name ="dialog_confirm_playlist_deletion">Да</string>
    <string name ="dialog_cancel_playlist_deletion">Нет</string>

    <string name ="edit_toolbar">Редактировать</string>
    <string name ="save_button">Сохранить</string>

    <string name ="no_tracks_to_share">В этом плейлисте нет треков, которыми можно поделиться</string>
    <string name ="no_tracks_notification">В этом плейлисте нет треков</string>




</resources>