<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainMenuBackground"
    android:orientation="vertical">


    <TextView
        style="@style/HeadingTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="14dp"
        android:paddingBottom="@dimen/padding_16"
        android:text="@string/app_name"
        android:textColor="@color/mainHeadingTextColor"
        android:textSize="@dimen/main_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="24dp"
        android:paddingEnd="@dimen/padding_16"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search_button"
            style="@style/MainMenuButton"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/search"
            app:icon="@drawable/button_search" />

        <Button
            android:id="@+id/media_button"
            style="@style/MainMenuButton"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/media"
            app:icon="@drawable/button_media" />

        <Button
            android:id="@+id/settings_button"
            style="@style/MainMenuButton"
            android:text="@string/settings"
            app:icon="@drawable/button_settings" />

    </LinearLayout>


</LinearLayout>