<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment"
    tools:ignore="ExtraText">

    <com.google.android.material.appbar.MaterialToolbar
        app:titleTextAppearance="@style/HeadingTextStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/settings"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="@dimen/padding_16"
        android:paddingVertical="@dimen/vertical_padding"
        android:text="@string/night_mode"
        android:textColor="@color/secondaryTextColor"
        android:textFontWeight="500"
        android:textSize="@dimen/settings_text_size"
        android:theme="@style/SwitchStyle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_button"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/share"
        app:drawableTint="@color/iconColor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_button"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/support"
        app:drawableTint="@color/iconColor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement_button"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/agreement"
        app:drawableTint="@color/iconColor" />

</LinearLayout>