<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:paddingStart="@dimen/horizontal_padding">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:src="@drawable/arrow_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"/>

    </LinearLayout>>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding"
        android:text="@string/night_mode"
        android:textSize="@dimen/settings_text_size"
        tools:ignore="UseSwitchCompatOrMaterialXml" />>

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/share"/>

    </FrameLayout>>

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/support"/>
    </FrameLayout>>

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/arrow_forward"/>
    </FrameLayout>


</LinearLayout>