<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    tools:context="com.practicum.playlistmaker.search.ui.SearchFragment">

    <TextView
        style="@style/HeadingTextStyle"
        android:padding="16dp"
        android:text="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/search_shape"
        android:paddingHorizontal="12dp">

        <EditText
            android:id="@+id/input_search"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/search_icon_et"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="8dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/search_cursor" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:paddingEnd="2dp"
            android:src="@drawable/cross"
            app:tint="@color/searchContentColor"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/you_searched"
        style="@style/HeadingTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:text="@string/you_searched"
        android:textAlignment="center"
        android:textSize="19sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_history"
            style="@style/RoundedButtonStyle"
            android:layout_width="148dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/clear_history"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progressBarColor"
        android:layout_marginTop="116dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/search_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/nothing_found_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/search_placeholder" />

        <TextView
            style="@style/SearchPlaceholderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/nothing_found"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_error_palceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/network_error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/network_error" />

        <TextView
            style="@style/SearchPlaceholderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/network_error"
            android:textAlignment="center" />

        <TextView
            style="@style/SearchPlaceholderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/check_connection"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_button"
            style="@style/RoundedButtonStyle"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/update" />

    </LinearLayout>


</LinearLayout>