<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/back_button"
        style="@style/BackArrow"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artwork_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="82dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/track_name"
        style="@style/PlayerTrackNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TN"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artwork_cover" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/PlayerArtistNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="AN"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        android:gravity="top"/>

    <ImageButton
        android:id="@+id/add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_bg"
        android:padding="14dp"
        android:src="@drawable/add_to_playlist_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintHorizontal_bias="0.0"/>

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@drawable/play_button"
        app:layout_constraintBottom_toTopOf="@id/durationText"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:tint="@color/trackNameColor" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_bg"
        android:padding="14dp"
        android:src="@drawable/like_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
        android:id="@+id/time_under_button"
        style="@style/HeadingTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:30"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <TextView
        android:id="@+id/durationText"
        style="@style/trackDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/durationText"
        app:layout_constraintTop_toTopOf="@id/duration_pl"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintBottom_toBottomOf="@id/duration_pl"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/albumText"
        style="@style/trackDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albumText"
        app:layout_constraintBottom_toBottomOf="@id/album_pl"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/album_pl"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/yearText"
        style="@style/trackDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearText"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/year_pl"
        app:layout_constraintBottom_toBottomOf="@id/year_pl"/>

    <TextView
        android:id="@+id/genreText"
        style="@style/trackDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genreText"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/genre_pl"
        app:layout_constraintBottom_toBottomOf="@id/genre_pl"/>

    <TextView
        android:id="@+id/countryText"
        style="@style/trackDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countryText"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/country_pl"
        app:layout_constraintBottom_toBottomOf="@id/country_pl"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/durationText"
        app:layout_constraintGuide_percent="0.3"/>


    <TextView
        android:id="@+id/duration_pl"
        style="@style/trackDetailsValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_pl"
        app:layout_constraintBottom_toTopOf="@id/album_pl"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/time_under_button"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/album_pl"
        style="@style/trackDetailsValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_pl"
        android:textAlignment="viewEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/year_pl"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/centerLine"
        app:layout_constraintTop_toBottomOf="@id/duration_pl" />

    <TextView
        android:id="@+id/year_pl"
        style="@style/trackDetailsValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_pl"
        app:layout_constraintBottom_toTopOf="@id/genre_pl"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/album_pl" />

    <TextView
        android:id="@+id/genre_pl"
        style="@style/trackDetailsValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_pl"
        app:layout_constraintBottom_toTopOf="@id/country_pl"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/year_pl" />

    <TextView
        android:id="@+id/country_pl"
        style="@style/trackDetailsValueStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_pl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/genre_pl"
        android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>