<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.practicum.playlistmaker.media.ui.PlaylistCreationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/playlist_maker_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/headingTextColor"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/HeadingTextStyle" />

    <FrameLayout
        android:id="@+id/upload_image_template"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/upload_image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/playlist_cover_placeholder"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/upload_image_picked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_title_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_title"
        app:boxStrokeColor="@color/textfield_selector"
        app:boxStrokeWidth="1dp"
        app:cursorColor="@color/searchCursorColor"
        app:hintTextColor="@color/searchCursorColor"
        app:layout_constraintTop_toBottomOf="@id/upload_image_template">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:hint="@string/playlist_description"
        app:boxStrokeColor="@color/textfield_selector"
        app:boxStrokeWidth="1dp"
        app:cursorColor="@color/searchCursorColor"
        app:hintTextColor="@color/searchCursorColor"
        app:layout_constraintTop_toBottomOf="@id/playlist_title_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_playlist"
        style="@style/PlaylistCreationButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/create_button_selector"
        android:enabled="false"
        android:text="@string/create_playlist"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>